Fix grids, gaps and paddings. Add trending styles

--- a/style.css
+++ b/style.css
@@ -39,12 +39,16 @@ ul,
 ol {
   list-style: none;
 }
+html,
+body {
+  height: 100vh;
+}
 
 body {
   display: grid;
-  grid-template-columns: 1fr 5fr;
-  grid-template-rows: 20vh 1fr;
-  height: 100vh;
+  grid-template-columns: min(25vh, 300px) 1fr;
+  grid-template-rows: min-content 1fr;
+  overflow: hidden;
 }
 
 .aside {
@@ -99,11 +103,12 @@ body {
 
   display: grid;
   grid-template-columns: 3fr 2fr;
-  grid-template-rows: min-content 2fr;
+  grid-template-rows: min-content min-content;
+  align-items: center;
+  padding: 16px 32px;
 
-  > * {
-    padding: 16px 32px;
-  }
+  box-shadow: 15px 0 10px rgba(0, 0, 0, 0.25);
+  gap: 16px;
 
   .search-bar {
     display: grid;
@@ -111,7 +116,7 @@ body {
     grid-template-rows: 1fr;
     align-items: center;
 
-    gap: 8px;
+    gap: 0 8px;
 
     form {
       input {
@@ -152,7 +157,8 @@ body {
 
   .greetings {
     display: grid;
-    grid-template-columns: 75px 1fr;
+    grid-template-columns: max-content 1fr;
+    grid-template-rows: min-content;
     align-items: center;
     gap: 16px;
 
@@ -174,9 +180,10 @@ body {
   .buttons {
     display: grid;
     grid-template-columns: repeat(3, minmax(75px, 100px));
+    grid-template-rows: min-content;
     align-items: center;
     justify-content: end;
-    gap: 16px;
+    gap: 0 16px;
 
     a {
       background-color: var(--sidebar-clr);
@@ -200,8 +207,9 @@ body {
   display: grid;
   grid-template-columns: 1fr 300px;
   grid-template-rows: repeat(2, 1fr);
+  max-height: 100vh;
 
-  gap: 16px;
+  gap: 32px 12px;
   padding: 32px;
   padding-bottom: 0;
 
@@ -216,17 +224,18 @@ body {
     padding-left: 0;
     grid-row: span 2;
     display: grid;
-    gap: 16px;
+    gap: 12px;
+    grid-template-rows: min-content 1fr;
 
     ul {
       overflow-y: scroll;
       display: grid;
       gap: 32px;
-      padding: 16px;
+      padding: 32px;
+      padding-top: 6px;
       padding-left: 0;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       grid-auto-rows: 250px;
-      align-items: stretch;
 
       li {
         display: grid;
@@ -279,7 +288,8 @@ body {
 
   .announcements {
     display: grid;
-    gap: 32px;
+    gap: 16px;
+    grid-template-rows: min-content 1fr;
 
     ul {
       background-color: var(--header-clr);
@@ -314,14 +324,38 @@ body {
   }
 
   .trending {
+    display: grid;
+    gap: 12px;
+    grid-template-rows: min-content 1fr;
+    padding-bottom: 32px;
+
     ul {
+      background-color: var(--header-clr);
+      border-radius: var(--card-border-radius);
+
+      display: grid;
+      padding: 16px 24px;
+      gap: 16px 0;
       li {
         article {
           display: grid;
-          grid-template-columns: 75px max-content;
+          grid-template-columns: 50px max-content;
+          grid-template-rows: min-content;
+          gap: 0 12px;
+
+          align-items: center;
+          p {
+            font-size: 0.8rem;
+
+            span {
+              font-weight: bold;
+              display: block;
+            }
+          }
 
           img {
-            grid-row: span 2;
+            border-radius: 50%;
+            object-fit: cover;
           }
         }
       }
